--- a/samples/TypedRoutingWebSite/project.lock.json
+++ b/samples/TypedRoutingWebSite/project.lock.json
@@ -3,7 +3,7 @@
   "version": 2,
   "targets": {
     "DNX,Version=v4.5.1": {
-      "AspNet.Mvc.TypedRouting/1.0.0": {
+      "AspNet.Mvc.TypedRouting/1.0.0-rc1-final": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.5.1",
         "dependencies": {
@@ -1670,16 +1670,11 @@
       }
     },
     "DNXCore,Version=v5.0": {
-      "AspNet.Mvc.TypedRouting/1.0.0": {
+      "AspNet.Mvc.TypedRouting/1.0.0-rc1-final": {
         "type": "project",
         "framework": ".NETPlatform,Version=v5.4",
         "dependencies": {
-          "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
-          "Microsoft.CSharp": "4.0.1-beta-23516",
-          "System.Collections": "4.0.11-beta-23516",
-          "System.Linq": "4.0.1-beta-23516",
-          "System.Runtime": "4.0.21-beta-23516",
-          "System.Threading": "4.0.11-beta-23516"
+          "Microsoft.AspNet.Mvc": "6.0.0-rc1-final"
         }
       },
       "Microsoft.AspNet.Antiforgery/1.0.0-rc1-final": {
@@ -3973,7 +3968,7 @@
       }
     },
     "DNX,Version=v4.5.1/win7-x86": {
-      "AspNet.Mvc.TypedRouting/1.0.0": {
+      "AspNet.Mvc.TypedRouting/1.0.0-rc1-final": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.5.1",
         "dependencies": {
@@ -5643,7 +5638,7 @@
       }
     },
     "DNX,Version=v4.5.1/win7-x64": {
-      "AspNet.Mvc.TypedRouting/1.0.0": {
+      "AspNet.Mvc.TypedRouting/1.0.0-rc1-final": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.5.1",
         "dependencies": {
@@ -7313,16 +7308,11 @@
       }
     },
     "DNXCore,Version=v5.0/win7-x86": {
-      "AspNet.Mvc.TypedRouting/1.0.0": {
+      "AspNet.Mvc.TypedRouting/1.0.0-rc1-final": {
         "type": "project",
         "framework": ".NETPlatform,Version=v5.4",
         "dependencies": {
-          "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
-          "Microsoft.CSharp": "4.0.1-beta-23516",
-          "System.Collections": "4.0.11-beta-23516",
-          "System.Linq": "4.0.1-beta-23516",
-          "System.Runtime": "4.0.21-beta-23516",
-          "System.Threading": "4.0.11-beta-23516"
+          "Microsoft.AspNet.Mvc": "6.0.0-rc1-final"
         }
       },
       "Microsoft.AspNet.Antiforgery/1.0.0-rc1-final": {
@@ -9950,16 +9940,11 @@
       }
     },
     "DNXCore,Version=v5.0/win7-x64": {
-      "AspNet.Mvc.TypedRouting/1.0.0": {
+      "AspNet.Mvc.TypedRouting/1.0.0-rc1-final": {
         "type": "project",
         "framework": ".NETPlatform,Version=v5.4",
         "dependencies": {
-          "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
-          "Microsoft.CSharp": "4.0.1-beta-23516",
-          "System.Collections": "4.0.11-beta-23516",
-          "System.Linq": "4.0.1-beta-23516",
-          "System.Runtime": "4.0.21-beta-23516",
-          "System.Threading": "4.0.11-beta-23516"
+          "Microsoft.AspNet.Mvc": "6.0.0-rc1-final"
         }
       },
       "Microsoft.AspNet.Antiforgery/1.0.0-rc1-final": {
@@ -12588,7 +12573,7 @@
     }
   },
   "libraries": {
-    "AspNet.Mvc.TypedRouting/1.0.0": {
+    "AspNet.Mvc.TypedRouting/1.0.0-rc1-final": {
       "type": "project",
       "path": "../../src/AspNet.Mvc.TypedRouting/project.json"
     },
