--- a/src/AspNet.Mvc.TypedRouting/project.json
+++ b/src/AspNet.Mvc.TypedRouting/project.json
@@ -1,7 +1,7 @@
 ﻿{
   "version": "1.1.0-rc2-final",
   "title": "ASP.NET Core MVC Typed Routing",
-  "copyright": "2015 Ivaylo Kenov",
+  "copyright": "2015-2016 Ivaylo Kenov",
   "description": "AspNet.Mvc.TypedRouting is a class library allowing typed expression based route registration and link generation for ASP.NET Core MVC. See the project repository for more information and available features.",
   "authors": [ "Ivaylo Kenov" ],
 
