Updated to use ASP.NET Core MVC 1.0.0 (closes #13)

--- a/samples/PerformanceTest/project.json
+++ b/samples/PerformanceTest/project.json
@@ -1,16 +1,11 @@
 ﻿{
-  "version": "1.0.0-*",
-  "description": "PerformanceTest Console Application",
-  "authors": [ "Ivaylo Kenov" ],
-
   "buildOptions": {
     "emitEntryPoint": true
   },
 
   "dependencies": {
-    "AspNet.Mvc.TypedRouting": "1.1.0-rc2-final",
-    "Microsoft.AspNetCore.Mvc": "1.0.0-rc2-final",
-    "Microsoft.AspNetCore.Http": "1.0.0-rc2-final",
+    "AspNet.Mvc.TypedRouting": "1.0.0-*",
+    "Microsoft.AspNetCore.Mvc": "1.0.0-*",
     "Moq":  "4.2.1510.2205" 
   },
 
