Added tests for the typed routing (closes #12, closes #4)

--- a/samples/TypedRoutingWebSite/project.json
+++ b/samples/TypedRoutingWebSite/project.json
@@ -70,7 +70,8 @@
 
   "buildOptions": {
     "emitEntryPoint": true,
-    "preserveCompilationContext": true
+    "preserveCompilationContext": true,
+    "warningsAsErrors": true
   },
 
   "runtimeOptions": {
